<resources>
    <string name="app_name">K.K. Jukebox</string>
    <string name="action_settings">Settings</string>
    <string name="Timer">Timer</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="accf">ACCF</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="always_play_k_k_songs">Always play K.K. songs!</string>
    <string name="play_k_k_songs_on_saturday_8pm_12pm_only">Play K.K. songs on Saturday (8pm - 12pm) only!</string>
    <string name="never_play_k_k_songs">Never play K.K. songs!</string>
    <string name="image_of_kk">Image of KK</string>
    <string name="pause_button">Pause button</string>
    <string name="sunny">Sunny</string>
    <string name="rainy">Rainy</string>
    <string name="ac">AC</string>
    <string name="acnl">ACNL</string>
    <string name="snowy">Snowy</string>
</resources>
