<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ACActivity"
    tools:showIn="@layout/activity_ac">

    <ImageButton
        android:id="@+id/kk_ac"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/transparent"
        android:onClick="onClick"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/kk"
        android:contentDescription="@string/image_of_kk" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/pause_ac"
                style="@android:style/Widget.Holo.ImageButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#00FFFFFF"
                android:contextClickable="false"
                android:focusableInTouchMode="false"
                android:onClick="onClick"
                android:outlineProvider="none"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/pause"
                android:contentDescription="@string/pause_button" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/weather_ac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="0dp"
            android:checkedButton="@id/sunny_ac"
            android:clickable="true"
            android:orientation="horizontal"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/sunny_ac"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/leafGreen"
                android:checked="true"
                android:text="@string/sunny"
                android:visibility="visible" />

            <RadioButton
                android:id="@+id/rainy_ac"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/leafGreen"
                android:text="@string/rainy"
                android:visibility="visible" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/games_ac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ac_ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_light"
                android:clickable="false"
                android:onClick="onClick"
                android:text="@string/ac"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/accf_ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#D5D3D3"
                android:onClick="onClick"
                android:text="@string/accf"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/acnl_ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#D5D3D3"
                android:clickable="true"
                android:onClick="onClick"
                android:text="@string/acnl"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>